--- a/react-fancy-image-effects/package.json
+++ b/react-fancy-image-effects/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "copy-webpack-plugin": "^5.0.0",
+    "file-loader": "^6.2.0",
     "hello-wasm-pack": "^0.1.0",
     "ts-loader": "^9.5.1",
     "webpack": "^5.89.0",
