--- a/react-fancy-image-effects/tsconfig.json
+++ b/react-fancy-image-effects/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "NodeNext",
-    "target": "es5",
+    "module": "esnext",
+    "target": "es2015",
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "nodenext",
