--- a/react-fancy-image-effects/package.json
+++ b/react-fancy-image-effects/package.json
@@ -36,6 +36,8 @@
     "fancy-image-effects": "file:../pkg",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11",
     "typescript": "^5.3.3"
   },
