--- a/react-fancy-image-effects/tsconfig.json
+++ b/react-fancy-image-effects/tsconfig.json
@@ -2,10 +2,10 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "esnext",
+    "module": "NodeNext",
     "target": "es2015",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "NodeNext",
   }
 }
