--- a/react-fancy-image-effects/tsconfig.json
+++ b/react-fancy-image-effects/tsconfig.json
@@ -1,11 +1,14 @@
 {
+  "include": ["src/**/*"],
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./dist",
     "noImplicitAny": true,
-    "module": "NodeNext",
     "target": "es2015",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "emitDeclarationOnly": true,
+    "declaration": true,
   }
 }
