--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Example",
+  "name": "example",
   "version": "0.1.0",
   "description": "Example of React SPA with fancy-image-effects",
   "main": "index.tsx",
@@ -34,16 +34,17 @@
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "fancy-image-effects": "file:../pkg",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-fancy-image-effects": "file:../react-fancy-image-effects",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "copy-webpack-plugin": "^5.0.0",
     "file-loader": "^6.2.0",
     "hello-wasm-pack": "^0.1.0",
