--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": true,
     "module": "NodeNext",
     "target": "es2015",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "NodeNext",
   }
